v 8.0 first working as per Serge's comments

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mesto-project-bootcamp",
   "version": "1.0.0",
   "description": "Данный [проект](https://whiskymerchant.github.io/mesto-project-bootcamp/) написан от лица самого путешествующего в мире кота, Скота. Это не просто кот, а кот-миротворец. Бебер (см. Луи-Фердинанда Селина) конца 2022 года. \r По странам, терпящим его присутствие, он несет желчь, депрессию и голубя мира. Скот уже прошел из Санкт-Петербурга в Москву, Ростов, Краснодар. Переплыл \r Черное Море на надувном матрасе Intex, прошел из Стамбула в Смирну, сел на паром до Лесбоса, где пока решил остаться на пару недель. Хвала Аллаху, на островах\r Эгейского моря любят котов (см. легенду о кошке Муиззе).",
-  "main": "script.js",
+  "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack serve",
